Branched Path Tracer + SSS incorrect Result #40456

Closed
opened 2014-06-01 12:47:33 +02:00 by Sebastian Röthlisberger · 8 comments

System Information
OSX 10.9.3

Blender Version
Broken: own edfd989
Worked: (optional)

Short description of error
Enabled Branched Path Tracing + SSS + Uncheck Sample All Direct Lights = too bright

Exact steps for others to reproduce the error
Add SSS Material
Enable Branched Path Tracing
Uncheck Sample All direkt Lights
Increase SSS Samples

**System Information** OSX 10.9.3 **Blender Version** Broken: own edfd989 Worked: (optional) **Short description of error** Enabled Branched Path Tracing + SSS + Uncheck Sample All Direct Lights = too bright **Exact steps for others to reproduce the error** Add SSS Material Enable Branched Path Tracing Uncheck Sample All direkt Lights Increase SSS Samples

Changed status to: 'Open'

Changed status to: 'Open'
Brecht Van Lommel was assigned by Sebastian Röthlisberger 2014-06-01 12:47:33 +02:00

Added subscriber: @SebastianRothlisberger

Added subscriber: @SebastianRothlisberger

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

Ah I guess a check is missing somewhere, in case direct multi light is disabled. :/

Ah I guess a check is missing somewhere, in case direct multi light is disabled. :/

Added subscriber: @mont29

Added subscriber: @mont29

This issue was referenced by bc4043e797

This issue was referenced by bc4043e79781215ef4f583928cf60717039b178e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit bc4043e797.

Closed by commit bc4043e797.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40456
No description provided.