Fix T40456: cycles bug with branched path + sss + no sample all direct lights.